crates/kodo_parser/tests/snapshots/snapshots__snapshot_ast_minimal.snap
---
source: crates/kodo_parser/tests/snapshots.rs
expression: module
---
Module {
    id: NodeId(
        2,
    ),
    span: Span {
        start: 0,
        end: 148,
    },
    name: "minimal",
    imports: [],
    meta: Some(
        Meta {
            id: NodeId(
                0,
            ),
            span: Span {
                start: 21,
                end: 123,
            },
            entries: [
                MetaEntry {
                    key: "purpose",
                    value: "Minimal valid module",
                    span: Span {
                        start: 21,
                        end: 67,
                    },
                },
                MetaEntry {
                    key: "version",
                    value: "0.1.0",
                    span: Span {
                        start: 21,
                        end: 93,
                    },
                },
                MetaEntry {
                    key: "author",
                    value: "test",
                    span: Span {
                        start: 21,
                        end: 117,
                    },
                },
            ],
        },
    ),
    type_aliases: [],
    type_decls: [],
    enum_decls: [],
    trait_decls: [],
    impl_blocks: [],
    actor_decls: [],
    intent_decls: [],
    invariants: [],
    functions: [
        Function {
            id: NodeId(
                1,
            ),
            span: Span {
                start: 129,
                end: 146,
            },
            name: "noop",
            visibility: Private,
            is_async: false,
            generic_params: [],
            annotations: [],
            params: [],
            return_type: Unit,
            requires: [],
            ensures: [],
            body: Block {
                span: Span {
                    start: 139,
                    end: 146,
                },
                stmts: [],
            },
        },
    ],
    test_decls: [],
}
